--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ config.cache
 /guix-download
 /gnu/packages/bootstrap/x86_64-linux/guile-2.0.7.tar.xz
 /gnu/packages/bootstrap/i686-linux/guile-2.0.7.tar.xz
+/gnu/packages/bootstrap/mips64el-linux/guile-2.0.7.tar.xz
 /guix-package
 /guix/config.scm
 /guix-import
